observability/jaeger-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jaeger-route
  namespace: observability
spec:
  parentRefs:
    - name: kong
      sectionName: proxy
      namespace: keg
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /jaeger
      backendRefs:
        - name: jaeger
          namespace: observability
          port: 16686
