observability/prometheus-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-route
  namespace: observability
spec:
  parentRefs:
    - name: kong
      sectionName: proxy
      namespace: keg
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /prometheus
      backendRefs:
        - name: prometheus
          namespace: observability
          port: 9090
